[workspace]
resolver = "2"
members = ["tui-markdown", "markdown-reader"]

[workspace.package]
rust-version = "1.80.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/tui-markdown"
authors = ["Joshka"]


[workspace.dependencies]
ratatui = { version = "0.29.0", default-features = false }
tui-markdown = { version = "0.3.3", path = "tui-markdown" }

[patch.crates-io]
# when developing ratatui, uncomment this line to use the local version
# ratatui = { path = "../ratatui" }
