[package]
name = "markdown-reader"
description = "A simple markdown reader that uses ratatui to render markdown files."
version = "0.1.17"
documentation = "https://docs.rs/markdown-reader"
categories = ["command-line-interface"]
keywords = ["cli", "markdown", "ratatui", "terminal", "tui"]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
itertools = "0.13.0"
ratatui = { workspace = true, default-features = true, features = [
    "unstable-widget-ref",
] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
time = { version = "0.3.36", features = ["formatting", "macros"] }
tui-markdown = { version = "0.2.10", path = "../tui-markdown" }

[[bin]]
name = "mdr"
path = "src/main.rs"
