[package]
name = "markdown-reader"
description = "A simple markdown reader that uses ratatui to render markdown files."
version = "0.1.25"
documentation = "https://docs.rs/markdown-reader"
categories = ["command-line-interface"]
keywords = ["cli", "markdown", "ratatui", "terminal", "tui"]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
itertools = "0.14.0"
ratatui = { workspace = true, default-features = true, features = ["unstable-widget-ref"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
time = { version = "0.3.41", features = ["formatting", "macros"] }
tui-markdown.workspace = true

[[bin]]
name = "mdr"
path = "src/main.rs"
