[package]
name = "tui-markdown"
description = "A simple library for converting markdown to a Rataui Text value"
version = "0.2.10"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/tui-markdown"
documentation = "https://docs.rs/tui-markdown"
authors = ["Joshka"]
categories = ["command-line-interface"]
keywords = ["cli", "markdown", "ratatui", "terminal", "tui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.12.1"
ratatui.workspace = true
rstest = "0.23.0"
tracing = "0.1.40"
syntect = { version = "5.2.0", optional = true }
ansi-to-tui = "6.0.0"

[dev-dependencies]
indoc = "2.0.5"
tracing-subscriber = "0.3.18"
insta = "1.40.0"

[features]
highlight-code = ["dep:syntect"]
