[package]
name = "tui-markdown"
description = "A simple library for converting markdown to a Rataui Text value"
version = "0.2.10"
documentation = "https://docs.rs/tui-markdown"
categories = ["command-line-interface"]
keywords = ["cli", "markdown", "ratatui", "terminal", "tui"]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
itertools = "0.13.0"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.12.1"
ratatui.workspace = true
rstest = "0.23.0"
tracing = "0.1.40"
syntect = { version = "5.2.0", optional = true }
ansi-to-tui = { version = "6.0.0", optional = true }

[dev-dependencies]
indoc = "2.0.5"
tracing-subscriber = "0.3.18"
insta = "1.40.0"

[features]
highlight-code = ["dep:syntect", "dep:ansi-to-tui"]
