[package]
name = "tui-markdown"
description = "A simple library for converting markdown to a Rataui Text value"
version = "0.3.7"
documentation = "https://docs.rs/tui-markdown"
categories = ["command-line-interface"]
keywords = ["cli", "markdown", "ratatui", "terminal", "tui"]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["highlight-code"]

## Enable syntax highlighting using syntect and ansi-to-tui
highlight-code = ["dep:syntect", "dep:ansi-to-tui"]

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ansi-to-tui = { version = "8.0.0", optional = true }
document-features = { version = "0.2.12", optional = true }
itertools = "0.14.0"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13.0"
ratatui-core.workspace = true
rstest = "0.26.1"
syntect = { version = "5.3.0", optional = true }
tracing = "0.1.44"

[dev-dependencies]
indoc = "2.0.7"
insta = "1.46.0"
ratatui.workspace = true
tracing-subscriber = "0.3.22"
